# LimePipes

./: .gitignore  AUTHORS  CMakeLists.txt  LimePipes.pri  LimePipes.pro  LimePipesConfig.h.in  README  limepipes.xsd
src/: CMakeLists.txt  LimePipes.pro  Makefile  common.pri  src.pro
src/app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addsymbolsdialog.cpp  addsymbolsdialog.h  app.pro  app_resources.qrc  application.cpp  application.h  applicationinterface.h  commonapplication.cpp  commonapplication.h  commonpluginmanager.cpp  commonpluginmanager.h  guidowidget.cpp  guidowidget.h  instrumentmanager.cpp  instrumentmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newtunedialog.cpp  newtunedialog.h  newtunedialog.ui  settings.cpp  settings.h  texteditheaderwidget.cpp  texteditheaderwidget.h  texteditheaderwidget.ui
src/app/SMuFL/: smuflloader.cpp  smuflloader.h
src/app/dialogs/: addsymbolsdialog.cpp  addsymbolsdialog.h  addsymbolsdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/app/widgets/: symboldockwidget.cpp  symboldockwidget.h  symboldockwidget.ui  zoomwidget.cpp  zoomwidget.h  zoomwidget.ui
src/common/: defines.h  graphicsmapperinterface.h  itemdataroles.h  layoutsettings.cpp  layoutsettings.h  musiclayout.cpp  musiclayout.h  observablesettings.cpp  observablesettings.h  pluginmanagerinterface.h  scoresettings.cpp  scoresettings.h  settingdefines.h  settingsobserver.cpp  settingsobserver.h
src/common/datahandling/: datakeys.h  itembehavior.cpp  itembehavior.h  measurebehavior.cpp  measurebehavior.h  mimedata.cpp  mimedata.h  partbehavior.cpp  partbehavior.h  scorebehavior.cpp  scorebehavior.h  symbolbehavior.cpp  symbolbehavior.h  tunebehavior.cpp  tunebehavior.h
src/common/datatypes/: instrument.cpp  instrument.h  length.cpp  length.h  pitch.cpp  pitch.h  pitchcontext.cpp  pitchcontext.h  symbolgraphic.h  timesignature.cpp  timesignature.h
src/common/graphictypes/: baseengraver.cpp  baseengraver.h  clefglyphitem.cpp  clefglyphitem.h  glyphitem.cpp  glyphitem.h  iteminteraction.cpp  iteminteraction.h  stemengraver.cpp  stemengraver.h  stemglyphitem.cpp  stemglyphitem.h  symbolgraphicbuilder.cpp  symbolgraphicbuilder.h  tieengraver.cpp  tieengraver.h  tiegraphicsitem.cpp  tiegraphicsitem.h  timesignatureglyphitem.cpp  timesignatureglyphitem.h
src/common/interfaces/: instrumentinterface.h  symbolinterface.h
src/gui/: gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_model.cpp  qrc_resources.cpp  ui_mainwindow.h
src/include/: iapplication.h  itextformatplugin.h
src/interfaces/: instrument_ids.h  instrumentinterface.h  interfaceglobals.h  interfaces.pri  symbolinterface.h
src/model/: CMakeLists.txt  bar.cpp  bar.h  datapolicy.cpp  datapolicy.h  datapolicycollection.cpp  datapolicycollection.h  instrumentmanager.cpp  instrumentmanager.h  itembehavior.h  itembehaviorfactory.cpp  itemdatatypes.h  length.cpp  length.h  main.cpp  measure.cpp  measure.h  moc_model.cpp  model.cpp  model.h  model.pri  model.pro  model_itemtypes.h  musicitem.cpp  musicitem.h  musicitemfactory.cpp  musicitemfactory.h  musicmodel.cpp  musicmodel.h  musicmodelinterface.h  part.cpp  part.h  pitch.cpp  pitch.h  rootitem.cpp  rootitem.h  score.cpp  score.h  sheetmusic.cpp  sheetmusic.h  (+6 more)
src/model/commands/: insertitemcommand.h  insertitemscommand.h  removeitemscommand.h
src/model/datatypes/: datatypes.pri  instrument.cpp  instrument.h  length.cpp  length.h  pitch.cpp  pitch.h  pitchcontext.cpp  pitchcontext.h  symbolgraphic.cpp  timesignature.cpp  timesignature.h
src/model/itembehavior/: itembehavior.cpp  itembehavior.h  itembehavior.pri  itembehaviorfactory.h  score.cpp  score.h
src/model/musicfont/: emmentalermusicfont.cpp  emmentalermusicfont.h  musicfont.cpp  musicfont.h  musicfont.pri  musicfont_resources.qrc
src/model/symbols/: bar.cpp  bar.h  barline.cpp  barline.h  melodynote.cpp  melodynote.h  melodynotegraphicbuilder.cpp  melodynotegraphicbuilder.h  model_symbols_resources.qrc  symbols.pri
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/BagpipeMusicWriter/: CMakeLists.txt  bagpipemusicwriterformatplugin.h  (+1 more)
src/tests/: autotest.h  autotest_analyser.py  tests.pro
src/utilities/: error.h  utilities.pri
tests/: CMakeLists.txt  autotest.h  autotest_analyser.py  main.cpp  tests.pri  tests.pro
tests/Bar/: Bar.pro  tst_bartest  tst_bartest.cpp
tests/GuidoScores/: Highland Cathedral.bww  Highland Cathedral.gmn  Pumpkin.bww  Pumpkin.gmn  Scotland the brave _ Wings _ Wooden Heart.bmw  Scotland the brave _ Wings _ Wooden Heart.bww  Scotland the brave _ Wings _ Wooden Heart.gmn  doublings.bww  simple.bww
tests/ItemBehavior/: ItemBehavior.pro  tst_itembehaviortest.cpp
tests/ItemBehaviorFactory/: ItemBehaviorFactory.pro
tests/Length/: Length.pro  tst_lengthtest  tst_lengthtest.cpp
tests/MelodyNote/: MelodyNote.pro  tst_melodynotetest  tst_melodynotetest.cpp
tests/MusicItem/: MusicItem.pro  tst_musicitemtest  tst_musicitemtest.cpp
tests/MusicModel/: MusicModel.pro  tst_musicmodeltest  tst_musicmodeltest.cpp
tests/MusicModelTestPlugin/: CMakeLists.txt  MusicModelTestPlugin.pro  MusicModelTestPlugin_global.h  musicmodeltestplugin.cpp  musicmodeltestplugin.h  testinstrument.cpp  testinstrument.h
tests/Pitch/: Pitch.pro  tst_pitchtest  tst_pitchtest.cpp
tests/Score/: Score.pro  tst_scoretest  tst_scoretest.cpp
tests/Symbol/: Symbol.pro  tst_symboltest  tst_symboltest.cpp
tests/TimeSignature/: TimeSignature.pro  tst_timesignaturetest.cpp
tests/Tune/: Tune.pro  tst_tunetest  tst_tunetest.cpp
tests/app/: CMakeLists.txt  app.pro
tests/bar/: bartest.cpp
tests/common/: CMakeLists.txt
tests/model/: CMakeLists.txt  model.pro  modeltest.h
tests/part/: parttest.cpp  parttest.h
tests/plugins/: CMakeLists.txt
tests/sheetmusic/: sheetmusictest.cpp  sheetmusictest.h
tests/symbol/: symboltest.cpp
tests/testmocks/: testsymbolgraphicbuilder.cpp  testsymbolgraphicbuilder.h
tests/tune/: tunetest.cpp  tunetest.h
tests/views/: CMakeLists.txt  views.pro
(+638 files in other folders)
