add_subdirectory( RootItem )
add_subdirectory( Score )
add_subdirectory( Tune )
add_subdirectory( Part )
add_subdirectory( Measure )
add_subdirectory( Symbol )
add_subdirectory( MusicItem )
add_subdirectory( MusicModel )
add_subdirectory( SymbolGraphicBuilder )

add_subdirectory( datatypes )
add_subdirectory( InstrumentManager )
add_subdirectory( musicfont )
add_subdirectory( symbols )
